--- a/static/style/infn-style.css
+++ b/static/style/infn-style.css
@@ -490,6 +490,7 @@ input {
     font-weight: 900;
     color: var(--infn-color-primary);
     max-width: 500px;
+    background: white;
 }
 
 .infn-counter > div {
