fied primary color

--- a/static/style/infn-style.css
+++ b/static/style/infn-style.css
@@ -1,6 +1,6 @@
 :root {
-    --infn-color-primary: #162D4D;
-    --infn-color-primary-50: #162D4D80;
+    --infn-color-primary: #002A48;
+    --infn-color-primary-50: #002A4880;
     --infn-color-primary-hover: #20385a;
     
     --infn-color-secondary: #fefefe;
